--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         }
     ],
     "require": {
-        "magento/module-graph-ql": "*",
-        "scandipwa/slider": "*"
+        "magento/product-community-edition": "2.3.1",
+        "scandipwa/slider": "^1.0"
     },
     "autoload": {
         "files": [
