--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "magento/product-community-edition": "2.3.1",
+        "magento/magento2-base": "^2.3.1",
         "scandipwa/slider": "^1.0"
     },
     "autoload": {
